<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="292dp"
    tools:context=".Fragment.Fragment_NoBluetoothConn"
    android:background="@drawable/gradient9">

    <TextView
        android:id="@+id/tvApologize"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/tvApologize"
        android:textSize="27sp"
        android:textColor="@color/colorTurquoise0"/>

    <LinearLayout
        android:id="@+id/llNoBluetoothConn1"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvFirstRowNoBluetoothConn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvFirstRowNoBluetoothConn"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/colorTurquoise0" />

        <TextView
            android:id="@+id/tvSecondRowNoBluetoothConn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvSecondRowNoBluetoothConn"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/colorTurquoise0"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNoBluetoothConn2"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:background="@drawable/gradient8">

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/tvThirdRowNoBluetoothConn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvThirdRowNoBluetoothConn"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_thin" />

        <TextView
            android:id="@+id/tvFourthRowNoBluetoothConn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvFourthRowNoBluetoothConn"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_thin" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnNoBluetoothConn"
        android:layout_width="60dp"
        android:layout_height="39dp"
        android:layout_below="@+id/llNoBluetoothConn1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/gradient8"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/btnDifficulty"
        android:textSize="17sp" />

</RelativeLayout>