<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="320dp"
    tools:context=".Fragment.Fragment_OpponentDisconn"
    android:background="@drawable/gradient9">

    <TextView
        android:id="@+id/tvGameStatus"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/tvGameStatus"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/roboto_bold"
        android:textSize="36sp"/>

    <LinearLayout
        android:id="@+id/llOppDisc"
        android:layout_width="330dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:background="@drawable/gradient8"
        >

        <Space
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <TextView
            android:id="@+id/tvFirstRowOppDisc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvFirstRowOppDisc"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_thin" />

        <TextView
            android:id="@+id/tvSecondRowOppDisc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvSecondRowOppDisc"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_thin" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOpponentDiscRetToMainInter"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/gradient12"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/btnAnotherGameRetToMainInter"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#000000"/>
</RelativeLayout>