<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="300dp"
    tools:context=".Fragment.Fragment_GameFinished"
    android:background="@drawable/gradient0">

    <TextView
        android:id="@+id/tvGameStatus"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/tvGameStatus"
        android:gravity="center"
        android:textColor="#000000"
        android:fontFamily="@font/roboto_bold"
        android:textSize="36sp"/>
    <Button
        android:id="@+id/btnGameFinishedNewGame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/btnGameFinishedExitGame"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/gradient12"
        android:text="@string/btnGameFinishedNewGame"
        android:fontFamily="@font/roboto_thin"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnGameFinishedExitGame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        android:background="@drawable/gradient12"
        android:text="@string/btnGameFinishedExitGame"
        android:fontFamily="@font/roboto_thin"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:textSize="22sp"/>

</RelativeLayout>